# xai-pytorch

./: README.md  pyproject.toml  quickstart.py  requirements.txt  torch_nn_layers.py
.github/workflows/: run-workflow-tests.yml
examples/: PytorchPredictFromModel.xircuits  PytorchTrainCustomNN.xircuits  PytorchTrainModel.xircuits  example.xircuits
