[project]
name = "xai-pytorch"
version = "0.1.0"
description = "Xircuits component library for PyTorch."
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-pytorch"
keywords = ["xircuits", "pytorch", "deep learning"]

dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "pillow"
]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/PyTorchTrainModel.xircuits"
requirements_path = "requirements.txt"
